# nuggets

./: .gitignore  README.md  pyproject.toml
api/server/accounts/: admin.py  forms.py  models.py
api/server/accounts/migrations/: 0001_initial.py  0003_profile.py
api/server/api/: serializers.py  urls.py  views.py
api/server/nuggets/: admin.py  apps.py  feeds.py  forms.py  models.py  sitemaps.py  views.py
api/server/nuggets/migrations/: 0001_initial.py  0002_quiz_tags.py  0003_quiz_pub_date.py  0004_auto_20210806_1628.py  0005_auto_20210806_1637.py  0006_auto_20210806_1655.py  0008_auto_20210806_1701.py  0009_auto_20210806_1745.py  0010_auto_20210807_1253.py  0011_auto_20210807_1330.py  0012_auto_20210808_1024.py  0014_quiz_tags.py  0015_auto_20210808_1230.py  0016_alter_quiz_options.py  0018_question.py  0019_auto_20210819_1425.py  0020_question_answers.py  0021_auto_20210819_1429.py  0022_auto_20210819_1432.py  (+8 more)
api/server/server_django/: settings.py
api/server/templates/: base.html  dev.html  leaderboard.html  quiz.html  stats.html
api/servers/server_adonis/: .env.example  package.json
api/utils/: utils.js
cli/: cli.py
mobile/screens/: TabOneScreen.tsx
web/: package-lock.json  package.json
web-next/: tsconfig.json
web-next/components/: CardSection.tsx  QuizCard.tsx
web-next/layouts/: MainLayout.js
web-next/pages/: _app.tsx  about.tsx  account.tsx  index.tsx  mui.tsx  settings.tsx  trending.tsx
web-next/pages/quizzes/: index.tsx
web-next/public/: logo.jpg:Zone.Identifier
web/components/: Card.tsx  CardGroup.tsx  CardSection.tsx  Drawer.tsx  Footer.tsx  Layout.tsx  MiniDrawer.tsx  Navbar.tsx  QuizCard.tsx  SideMenu.tsx
web/layouts/: MainLayout.tsx
web/pages/: 404.tsx  _app.tsx  _document.tsx  account.tsx  index.tsx  semantic.tsx  settings.tsx  trending.tsx  tw.tsx
web/pages/api/: hello.ts
web/pages/quizzes/: [id].tsx  index.tsx
web/src/: App.tsx  LandingPage.tsx
web/styles/: Home.module.css  globals.css  theme.js
(+36 files in other folders)
