[tool.poetry]
name = "nuggets"
version = "0.1.0"
description = ""
authors = ["Samir Azzouz <s.azzouz97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
click = "^8.0.1"
djangorestframework = "^3.12.4"
graphene-django = "^2.15.0"
django-taggit = "^1.5.1"
graphene = "^2.1.9"
django-filter = "^2.4.0"
django-tailwind = "^2.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
